Fix: Some details tables were overflowing for some reason on phones

--- a/Theme/ElegantFin-theme-nightly.css
+++ b/Theme/ElegantFin-theme-nightly.css
@@ -2754,9 +2754,9 @@ div[data-role="controlgroup"] a.ui-btn-active {
     margin-bottom: 1.5em;
 }
 
-.layout-mobile .detailSection {
+/* .layout-mobile .detailSection {
     grid-template-columns: 1fr !important;
-}
+} */
 
 .detailPageContent {
     gap: 1em;
